force-app/main/default/objects/Extraction_Profile__mdt/fields/Medium__c.field-meta.xml
<CustomField>
    <fullName>Medium__c</fullName>
    <label>Medium</label>
    <type>Text</type>
    <length>40</length>
</CustomField>