force-app/main/default/objects/Extraction_Profile__mdt/fields/Profile_Key__c.field-meta.xml
<CustomField>
    <fullName>Profile_Key__c</fullName>
    <label>Profile Key</label>
    <type>Text</type>
    <length>80</length>
</CustomField>