force-app/main/default/objects/Extraction_Profile__mdt/fields/Schema_JSON__c.field-meta.xml
<CustomField>
    <fullName>Schema_JSON__c</fullName>
    <label>Schema JSON</label>
    <type>LongTextArea</type>
    <length>32000</length>
</CustomField>